--- a/MDK-ARM/CRX_JET_FINAL/CRX_JET_FINAL.build_log.htm
+++ b/MDK-ARM/CRX_JET_FINAL/CRX_JET_FINAL.build_log.htm
@@ -45,27 +45,6 @@ compiling freertos.c...
 ../Core/Src/freertos.c(28): error:  #5: cannot open source input file "Comm.h": No such file or directory
   #include "Comm.h"
 ../Core/Src/freertos.c: 0 warnings, 1 error
-compiling stm32f4xx_it.c...
-../Drivers/TMC2209/TMC2209.h(456): warning:  #1-D: last line of file ends without a newline
-  #endif /* TMC_H_ */
-../Core/Src/stm32f4xx_it.c: 1 warning, 0 errors
-compiling Motor.c...
-..\Tasks\Motor.h(6): warning:  #1-D: last line of file ends without a newline
-  #endif//_MOTOR_H
-..\Tasks\Comm.h(73): warning:  #1295-D: Deprecated declaration Comm_Init_Queue - give arg types
-  void Comm_Init_Queue(); 
-..\Tasks\Comm.h(74): warning:  #1295-D: Deprecated declaration Comm_Fetch_Queue - give arg types
-  GMCommand_t* Comm_Fetch_Queue();
-..\Tasks\Comm.h(75): warning:  #1295-D: Deprecated declaration Comm_Put_Queue - give arg types
-  GMCommand_t* Comm_Put_Queue();
-..\Tasks\Comm.h(76): warning:  #1295-D: Deprecated declaration Comm_Put_Queue_CPLT - give arg types
-  void Comm_Put_Queue_CPLT();
-../Drivers/TMC2209/TMC2209.h(456): warning:  #1-D: last line of file ends without a newline
-  #endif /* TMC_H_ */
-..\Tasks\Motor.c(29): warning:  #174-D: expression has no effect
-  				
-_NOP;
-..\Tasks\Motor.c: 7 warnings, 0 errors
 compiling Pump.c...
 ..\Tasks\Pump.h(6): warning:  #1-D: last line of file ends without a newline
   #endif
@@ -79,19 +58,21 @@ compiling Pump.c...
   void Comm_Put_Queue_CPLT();
 ../Drivers/TMC2209/TMC2209.h(456): warning:  #1-D: last line of file ends without a newline
   #endif /* TMC_H_ */
-..\Tasks\Pump.c(67): warning:  #174-D: expression has no effect
+..\Tasks\Pump.c(70): warning:  #188-D: enumerated type mixed with another type
+  				HAL_GPIO_WritePin(
+PIOD, 
+S1_CTL_Pin, currentIntCommandPtr->param1);
+..\Tasks\Pump.c(75): warning:  #188-D: enumerated type mixed with another type
+  				HAL_GPIO_WritePin(
+PIOD, 
+S2_CTL_Pin, currentIntCommandPtr->param1);
+..\Tasks\Pump.c(102): warning:  #174-D: expression has no effect
   				
 _NOP;
-..\Tasks\Pump.c(70): warning:  #1-D: last line of file ends without a newline
+..\Tasks\Pump.c(105): warning:  #1-D: last line of file ends without a newline
   }
-..\Tasks\Pump.c: 8 warnings, 0 errors
-compiling TMC2209.c...
-..\Drivers\TMC2209\TMC2209.h(456): warning:  #1-D: last line of file ends without a newline
-  #endif /* TMC_H_ */
-..\Drivers\TMC2209\TMC2209.c(854): warning:  #1-D: last line of file ends without a newline
-  }
-..\Drivers\TMC2209\TMC2209.c: 2 warnings, 0 errors
-"CRX_JET_FINAL\CRX_JET_FINAL.axf" - 3 Error(s), 22 Warning(s).
+..\Tasks\Pump.c: 10 warnings, 0 errors
+"CRX_JET_FINAL\CRX_JET_FINAL.axf" - 3 Error(s), 14 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -116,7 +97,7 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS\Core\Include\tz_context.h
 Target not created.
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
